--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
         </div>
-        <h1 class="messagetitle">Merah</h1>
+        <h1 class="messagetitle">Houry</h1>
         <p class="messagetext">
             Like these eternal blossoming flowers,<br>
             my love for you grows more beautiful each day ♡
