--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
                 </div>
             </div>
         </div>
-        <h1 class="messagetitle">Houry</h1>
+        <h1 class="messagetitle">حوري</h1>
         <p class="messagetext">
-            Like these eternal blossoming flowers,<br>
-            my love for you grows more beautiful each day ♡
+            مثل هذه الزهور المتفتحة الأبدية،<br> يزداد حبي لكِ جمالًا كل يوم ♡
         </p>
     </div>
     <div class="flowers">
