--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blossoming Love for Houry</title>
+    <title>Blossoming Love for Dana</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +27,7 @@
                 </div>
             </div>
         </div>
-        <h1 class="messagetitle">Houry</h1>
+        <h1 class="messagetitle">Dana</h1>
         <p class="messagetext">
             Like these eternal blossoming flowers,<br>
             my love for you grows more beautiful each day ♡
